--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Holberton School</title>
+        <title>Best School</title>
     </head>
 
     <body>
